--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "chrome-launcher": "^1.2.0",
     "cors": "^2.8.5",
+    "debug": "^4.4.1",
     "express": "^4.18.2",
+    "lighthouse-logger": "^2.0.1",
     "venom-bot": "^5.1.1"
   },
   "engines": {
@@ -18,5 +21,3 @@
   "author": "Bruno Sandri",
   "license": "MIT"
 }
-
-
